--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,8 +1,8 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Lucida Sans';
     box-sizing: border-box;
+    font-family: 'PT Sans', sans-serif;
     /* border: solid black 1px; */
 }
 
