--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,117 +1,161 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'PT Sans', sans-serif;
-    /* border: solid black 1px; */
+  margin: 1px;
+  padding: 0;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  box-sizing: border-box;
+  font-family: "facetruque-bold";
+  /* border: solid black 1px; */
 }
 
 body {
-    display: flex;
-    margin: 0 auto;
-    background-image: linear-gradient(to right, #007a10, #00986d, #00b1b2, #6dc7e0, #bedbf5, #c8d3f0, #d2cce8, #d9c5dc, #c898b6, #b96a85, #a33e4d, #811212);
+  display: flex;
+  margin: 0 auto;
+  background-image: linear-gradient(
+    to right,
+    #007a10,
+    #00986d,
+    #00b1b2,
+    #6dc7e0,
+    #bedbf5,
+    #c8d3f0,
+    #d2cce8,
+    #d9c5dc,
+    #c898b6,
+    #b96a85,
+    #a33e4d,
+    #811212
+  );
 
-    width: 100vw;
-    height: 100vh;
-    min-width: 320px;
-    flex-direction: column;
-    color: rgb(0, 0, 0);
-    font-weight: 700;
+  width: 100vw;
+  height: 100vh;
+  min-width: 320px;
+  flex-direction: column;
+  color: rgb(0, 0, 0);
+  font-weight: 700;
 }
 
 .head {
-
-    width: 100%;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    gap: 6px;
-    flex-direction: column;
-    margin-top: 21px;
+  width: 100%;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  gap: 6px;
+  flex-direction: column;
+  margin-top: 21px;
 }
 
 .container {
-    width: 280px;
-    height: 200px;
-    display: flex;
-    flex-direction: column;
-    gap: 28px;
-    margin-top: 15rem;
-    margin: 79px auto;
-    justify-items: center;
-    align-items: center;
-    /* margin-top: 129px; */
-    justify-content: center;
+  width: 280px;
+  height: 110px;
+  display: flex;
+  flex-direction: column;
+  gap: 28px;
+  margin-top: 15rem;
+  margin: 79px auto;
+  justify-items: center;
+  align-items: center;
+  /* margin-top: 129px; */
+  justify-content: center;
 }
-
-
 
 input,
 select {
-
-    border-radius: 5px;
-    cursor: pointer;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 input {
-
-    width: 100px;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 4px;
-    width: 7rem;
-    height: 2rem;
-    border-radius: 5px;
-
+  width: 100px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 4px;
+  width: 7rem;
+  height: 2rem;
+  border-radius: 5px;
 }
 
-
 h2 {
-    margin-top: 30px;
+  margin-top: 30px;
 }
 
 footer {
-
-    margin-top: -22px;
-    margin-left: auto;
-    margin-right: auto;
+  margin-top: -7px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .select1 {
-    margin-left: 24px;
+  margin-left: 24px;
 }
 
 .select2 {
-    margin-left: 10px;
+  margin-left: 10px;
 }
 
-
-
 .myButton {
-    box-shadow: inset 0px 1px 0px 0px #a4e271;
-    background: linear-gradient(to bottom, #89c403 5%, #77a809 100%);
-    background-color: #89c403;
-    border-radius: 6px;
-    border: 1px solid #74b807;
-    display: inline-block;
-    cursor: pointer;
-    color: #ffffff;
-    font-family: Arial;
-    font-size: 15px;
-    font-weight: bold;
-    padding: 6px 24px;
-    text-decoration: none;
-    text-shadow: 0px 1px 0px #528009;
+  box-shadow: inset 0px 1px 0px 0px #a4e271;
+  background: linear-gradient(to bottom, #89c403 5%, #77a809 100%);
+  background-color: #89c403;
+  border-radius: 6px;
+  border: 1px solid #74b807;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: Arial;
+  font-size: 15px;
+  font-weight: bold;
+  padding: 6px 24px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #528009;
 }
 
 .myButton:hover {
-    background: linear-gradient(to bottom, #77a809 5%, #89c403 100%);
-    background-color: #77a809;
+  background: linear-gradient(to bottom, #77a809 5%, #89c403 100%);
+  background-color: #77a809;
 }
 
 .myButton:active {
-    position: relative;
-    top: 1px;
+  position: relative;
+  top: 1px;
 }
 
+.flag-it {
+  height: 14px;
+  width: 14px;
+  align-self: center;
+  margin-top: 32px;
+}
+
+.data-time {
+  align-self: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.imgEuro {
+  height: 18px;
+
+  width: 21px;
+}
+
+.divFlags {
+  display: flex;
+  align-self: center;
+}
+
+.time-br {
+  text-transform: capitalize;
+  font-size: 10px;
+}
+
+.time-it {
+  text-transform: capitalize;
+  font-size: 10px;
+  align-self: center;
+}
+
+footer {
+  margin: 22px;
+  margin-bottom: 30px;
+}
